--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project name="Hello World Project" default="info">
 <target name="info">
-<echo> Hello World - Welcome to TCS Taining on Jenkins</echo>
+<echo> Hello World - Welcome to TCS Taining on Jenkins- Automated build</echo>
 </target>
 </project>
